stop sidebar notes sticking out of map page sidebar

--- a/web/cobrands/smidsy/layout.scss
+++ b/web/cobrands/smidsy/layout.scss
@@ -336,7 +336,8 @@ body.mappage {
   }
 }
 
-#forgotten-pw {
+#forgotten-pw,
+.general-sidebar-notes {
   position: static;
   margin: 0;
   width: auto;
